src/Deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: barney-web
  name: barney-svc
spec:
  ports:
  - name: http
    port: 80
#    protocol: TCP
#    targetPort: 80
  selector:
    app: barney-web
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
